# akashvani-radio-live

./: .gitignore  README.md  pyproject.toml
scripts/: build_app_exe.bat
src/akashvani_radio_live/: __init__.py  app.py
