[project]
name = "akashvani-radio-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chaitu-ycr", email = "chaitu-ycr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyinstaller",
    "pywebview",
]

[project.scripts]
akashvani-radio-live = "akashvani_radio_live.app:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
